icon16dir = $(datadir)/icons/hicolor/16x16/apps
dist_icon16_DATA = 16x16/umps2.png

icon22dir = $(datadir)/icons/hicolor/22x22/apps
dist_icon22_DATA = 22x22/umps2.png

icon24dir = $(datadir)/icons/hicolor/24x24/apps
dist_icon24_DATA = 24x24/umps2.png

icon32dir = $(datadir)/icons/hicolor/32x32/apps
dist_icon32_DATA = 32x32/umps2.png

icon48dir = $(datadir)/icons/hicolor/48x48/apps
dist_icon48_DATA = 48x48/umps2.png
